# Mollisito

./: .gitignore  CMakeLists.txt  Readme.md
Source/: Application.cpp  Application.hpp  CMakeLists.txt  Main.cpp  Shared.hpp
Source/Common/: Common.h  Common.hpp  Compiler.h  Debug.hpp  Logger.cpp  Logger.h  Logger.hpp  NonCopyable.hpp  ScopeGuard.h  ScopeGuard.hpp
Source/Graphics/: Clipper.cpp  Clipper.hpp  Formats.cpp  Formats.hpp  Image.cpp  Image.hpp  Rasterizer.cpp  Rasterizer.hpp  Renderer.cpp  Renderer.hpp  Texture.cpp  Texture.hpp
Source/Math/: Color.hpp  Constants.hpp  Utility.hpp  Vector.hpp
Source/Render/: Texture.cpp  Texture.hpp
